test/libsolidity/syntaxTests/abiEncoder/selected_twice.sol
pragma abicoder v1;
pragma abicoder v1;
// ----
// SyntaxError 3845: (20-39): ABI coder has already been selected for this source unit.
